# html-extract

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: display.rs  main.rs  parser.rs  selector.rs
tests/: index.html  integration_test.rs
