[package]
name = "pup-rs"
version = "0.4.2"
edition = "2021"
description = "Command line tool for processing HTML using CSS selectors (Rust port of pup)"
license = "MIT"

[dependencies]
scraper = "0.22"
ego-tree = "0.10"
clap = { version = "4", features = ["derive"] }
regex = "1"
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
html-escape = "0.2"
sha1 = "0.10"
encoding_rs = "0.8"

[dev-dependencies]
sha1 = "0.10"
